<resources>
    <string name="app_name">Kuul</string>

    <!--Splash screen -->
    <string name="made_by_eveneer">Made by Eveneer</string>

    <!-- tutorial -->
    <string name="tutorial_p1_content">
        Kuul is an one stop service for women who are suffering from domestic violence
    </string>

    <!-- OTP settings-->
    <string name="fb_app_id">224317261820443</string>
    <string name="account_kit_client_token">78cd8a651dc7c41905c4659d28caeee1</string>
    <string name="ak_login_protocol_scheme">ak78cd8a651dc7c41905c4659d28caeee1</string>


    <!-- sign up -->
    <string name="sign_up_title">Sign Up</string>
    <string name="sign_up_page_txt">Please give real information so that we can identify\n
        You in case anything happens and you are in danger.\n
        \n
        Please note that Phone Number cannot be changed.</string>
    <string name="gender">Gender</string>
    <string name="user_name">Name</string>
    <string name="home_address">Home Address</string>
    <string name="sign_in">Sign In</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="ask_for_help">Ask for help</string>
    <string name="s_o_s">Help</string>
    <string name="alternate_help_text">
        Alternatively, if you have suffered from \n
    domestic abuse in the past,you can report \n
        those incidents will be reported too directly from this app
    </string>
    <string name="report_an_incident">report an incident</string>

    <string name="about_us">Eveneer is an IT Firm focused on developing real life \n
        solutions to real life problems. We are a small team of \n
        creatives, who got together and thought that if you \n
        could change the world by making things which \n
        could help the society.\n\n
        This product was made for Banglalink\'s SDG\n
        Hackathon but it doesn\'t mean we will not try\n
        to implement it in real life.\n\n
        Thank you for viewing this prototype</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="sos_sent">SOS Sent!</string>
    <string name="call_or_text">Would you like to receive a Call or Text?</string>
    <string name="call_me">Call me</string>
    <string name="text_me">Text me</string>

    <string name="report_incident_title">If you have suffered from domestic abuse in the\n
        past, you can report those incidents. Please tell us\n
        who the victim was, when this incident happened,\n
        and a short description of what happened. We will\n
        inform the right authorities about it.</string>
    <string name="date_of_event">Date of Event</string>
    <string name="victim_name">Victim Name</string>
    <string name="description_of_the_event">Description of the event</string>
    <string name="report_this_event">report this event</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings_home">Settings</string>

    <!-- Strings related to SettingsFragment -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="profile_edit_title">Here you can edit your profile. Please give real information so that we can identify you in case anything happens and you are in danger. Please note that Phone Number cannot be changed.</string>
    <string name="save_profile_btn">Save Profile</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="add_contacts">Add Contacts</string>
    <string name="victim_type">Victim Type :</string>
    <string name="vic_address">Address</string>

</resources>
