<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/form"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:text="@string/add_contacts"
        android:textColor="@color/form_text_color"
        android:textSize="25sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:text="@string/name"
        android:textColor="@color/form_text_color"
        android:textSize="17sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:hint="@string/name"
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:text="@string/phone"
        android:textColor="@color/form_text_color"
        android:textSize="17sp" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/input_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginEnd="15sp"
        android:hint="@string/phone"
        android:textSize="20sp" />
</androidx.appcompat.widget.LinearLayoutCompat>