<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ /*
  ~ *   Copyright 2019  Sadman Sakib
  ~ *
  ~ * Licensed under the Apache License, Version 2.0 (the "License");
  ~ * you may not use this file except in compliance with the License.
  ~ * You may obtain a copy of the License at
  ~ *
  ~ *     http://www.apache.org/licenses/LICENSE-2.0
  ~ *
  ~ * Unless required by applicable law or agreed to in writing, software
  ~ * distributed under the License is distributed on an "AS IS" BASIS,
  ~ * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ * See the License for the specific language governing permissions and
  ~ * limitations under the License.
  ~ **/
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".Home.options.Help.Help">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ask_for_help"
        android:textColor="#ffffff"
        android:textSize="30sp"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_marginTop="10dp"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_rect">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            android:id="@+id/help_btn"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:background="@drawable/btn_style"
            android:text="@string/s_o_s"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="#FFFFFF"
            android:textSize="25sp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alternate_help_text"
        android:textSize="17sp"
        android:textColor="#FFFFFF"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/previous_report_btn"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/report_an_incident"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/alert_button_style"/>

</LinearLayout>